Add smile icon menu, graph clicks

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -896,6 +896,7 @@
   "create-user": "Create User",
   "create-user_description": "Permission to create users",
   "Create_A_New_Channel": "Create a New Channel",
+  "Smile_face": "Smile Face",
   "Create_new": "Create new",
   "Create_unique_rules_for_this_channel": "Create unique rules for this channel",
   "Created_at": "Created at",
